# sistema-de-vendas

./: CHANGELOG.md  README.md  sistemadevendas.cabal  sistemadevendas.cabal.save0  todo.txt
app/: Main.hs
app/controllers/: cliente.hs  fornecedor.hs  funcionalidade.hs  produto.hs  venda.hs
app/db/: database.hs  model_db.sql  sistemavendas.db  tools.db
app/model/: cliente.hs  fornecedor.hs  produto.hs  venda.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
